--- a/SensorApp/nbproject/project.properties
+++ b/SensorApp/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SensorApp
+application.vendor=leo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SensorApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.swingx-all-1.6.4.jar=/home/leo/Downloads/swingx-all-1.6.4.jar
+file.reference.swingx-mavensupport-1.6.4.jar=/home/leo/Downloads/swingx-mavensupport-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.swingx-mavensupport-1.6.4.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
