--- a/SensorApp/nbproject/project.properties
+++ b/SensorApp/nbproject/project.properties
@@ -29,14 +29,16 @@ dist.jar=${dist.dir}/SensorApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.swingx-all-1.6.4.jar=/home/leo/Downloads/swingx-all-1.6.4.jar
-file.reference.swingx-mavensupport-1.6.4.jar=/home/leo/Downloads/swingx-mavensupport-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.swingx-mavensupport-1.6.4.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
