Handeled all execeptions

--- a/SensorApp/nbproject/project.properties
+++ b/SensorApp/nbproject/project.properties
@@ -33,7 +33,7 @@ file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib/jfreechart-1.0.19.jar
 file.reference.swingx-all-1.6.4.jar=/home/leo/Downloads/swingx-all-1.6.4.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
@@ -66,6 +66,7 @@ main.class=sensorapp.SensorApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
